fix(env): pool scale up attempt
